<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.atexxi.pillowdesk</groupId>
    <artifactId>PillowDesk</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>PillowDesk</name>
    <url>https://pillow-desk.eitchnet.ch</url>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <strolch.version>2.7.0-SNAPSHOT</strolch.version>
        <junit.jupiter.version>5.11.4</junit.jupiter.version>
        <jakarta.ws.rs.version>3.1.0</jakarta.ws.rs.version>
    </properties>

    <modules>
        <module>pillow-desk-core</module>
        <module>pillow-desk-rest</module>
        <module>pillow-desk-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>li.strolch</groupId>
                <artifactId>strolch-bom</artifactId>
                <version>${strolch.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Project modules -->
            <dependency>
                <groupId>ch.atexxi.pillowdesk</groupId>
                <artifactId>pillow-desk-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.atexxi.pillowdesk</groupId>
                <artifactId>pillow-desk-rest</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Jakarta REST -->
            <dependency>
                <groupId>jakarta.ws.rs</groupId>
                <artifactId>jakarta.ws.rs-api</artifactId>
                <version>${jakarta.ws.rs.version}</version>
            </dependency>

            <!-- JUnit 5 -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.vintage</groupId>
                <artifactId>junit-vintage-engine</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
